--- a/index.ipynb
+++ b/index.ipynb
@@ -94,7 +94,7 @@
     }
    ],
    "source": [
-    "greenville_population = greenville.keys('') # change None\n",
+    "greenville_population = type(greenville # change None\n",
     "greenville_population # 84554"
    ]
   },
