Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -93,7 +93,7 @@
     }
    ],
    "source": [
-    "greenville_population = dict.get(greenville) # change None\n",
+    "greenville_population = dict.get('') # change None\n",
     "greenville_population # 84554"
    ]
   },
