--- a/index.ipynb
+++ b/index.ipynb
@@ -350,25 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Walla Walla Valley',\n",
-       " 'Country': 'USA',\n",
-       " 'Population': 32237,\n",
-       " 'Area': 33}"
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[4]\n",
+    "los_cabos_pop = cities[3]\n",
     "los_cabos_pop # 287651"
    ]
   },
