--- a/index.ipynb
+++ b/index.ipynb
@@ -350,22 +350,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 287651, 'Area': 3750}"
+       "{'City': 'Los Cabos', 'Country': 'Mexico', 'Population': 3333, 'Area': 3750}"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "los_cabos_pop = cities[3]['Population']=\n",
+    "los_cabos_pop = cities[3]#['Population']=3333\n",
     "los_cabos_pop # 287651"
    ]
   },
