--- a/index.ipynb
+++ b/index.ipynb
@@ -440,7 +440,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pyeongchang_values = c\n",
+    "pyeongchang_values =\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list"
