Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -436,7 +436,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -477,7 +477,7 @@
        "  'Area': 3194}]"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
-    "cities"
+    "pyeongchang_values"
    ]
   },
   {
