--- a/index.ipynb
+++ b/index.ipynb
@@ -483,7 +483,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(map(lambda pyeongchang: pyeongchang,cities))\n",
+    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang ==,cities))\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
