--- a/index.ipynb
+++ b/index.ipynb
@@ -436,54 +436,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "[{'City': 'Solta', 'Country': 'Croatia', 'Population': 1700, 'Area': 59},\n",
-       " {'City': 'Greenville', 'Country': 'USA', 'Population': 84554, 'Area': 68},\n",
-       " {'City': 'Buenos Aires',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 13591863,\n",
-       "  'Area': 4758},\n",
-       " {'City': 'Los Cabos',\n",
-       "  'Country': 'Mexico',\n",
-       "  'Population': 287651,\n",
-       "  'Area': 3750},\n",
-       " {'City': 'Walla Walla Valley',\n",
-       "  'Country': 'USA',\n",
-       "  'Population': 32237,\n",
-       "  'Area': 33},\n",
-       " {'City': 'Marakesh', 'Country': 'Morocco', 'Population': 928850, 'Area': 200},\n",
-       " {'City': 'Albuquerque',\n",
-       "  'Country': 'New Mexico',\n",
-       "  'Population': 559277,\n",
-       "  'Area': 491},\n",
-       " {'City': 'Archipelago Sea',\n",
-       "  'Country': 'Finland',\n",
-       "  'Population': 60000,\n",
-       "  'Area': 8300},\n",
-       " {'City': 'Iguazu Falls',\n",
-       "  'Country': 'Argentina',\n",
-       "  'Population': 0,\n",
-       "  'Area': 672},\n",
-       " {'City': 'Salina Island', 'Country': 'Italy', 'Population': 4000, 'Area': 27},\n",
-       " {'City': 'Toronto', 'Country': 'Canada', 'Population': 630, 'Area': 2731571},\n",
-       " {'City': 'PyeongChang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194}]"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "KeyError",
+     "evalue": "0",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0mTraceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-40-c24603c4a27d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpyeongchang_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mpyeongchang\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpyeongchang\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpyeongchang_values\u001b[0m \u001b[0;31m# ['PyeongChang', 'South Korea', 2581000, 3194]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpyeongchang_values\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpyeongchang_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;32m<ipython-input-40-c24603c4a27d>\u001b[0m in \u001b[0;36m<lambda>\u001b[0;34m(pyeongchang)\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mpyeongchang_values\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfilter\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mpyeongchang\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mpyeongchang\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mcities\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mpyeongchang_values\u001b[0m \u001b[0;31m# ['PyeongChang', 'South Korea', 2581000, 3194]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0mtype\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mpyeongchang_values\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;31m# list\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mpyeongchang_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyError\u001b[0m: 0"
+     ]
     }
    ],
    "source": [
-    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang ==,cities))\n",
+    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang[0],cities))\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
