Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -453,7 +453,7 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang[0],cities))\n",
+    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang[''],cities))\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
