--- a/index.ipynb
+++ b/index.ipynb
@@ -436,25 +436,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'PyeongChang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194}]"
+       "<filter at 0x7f05f6a204e0>"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang['City']=='PyeongChang',cities))\n",
+    "pyeongchang_values = filter(lambda pyeongchang: pyeongchang['City']=='PyeongChang',cities)\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
