--- a/index.ipynb
+++ b/index.ipynb
@@ -436,19 +436,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[{'City': 'PyeongChang',\n",
-       "  'Country': 'South Korea',\n",
-       "  'Population': 2581000,\n",
-       "  'Area': 3194}]"
+       "{'City': 'PyeongChang',\n",
+       " 'Country': 'South Korea',\n",
+       " 'Population': 2581000,\n",
+       " 'Area': 3194}"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +458,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
-    "pyeongchang_values"
+    "pyeongchang_values[0]"
    ]
   },
   {
