--- a/index.ipynb
+++ b/index.ipynb
@@ -436,19 +436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'City': 'PyeongChang',\n",
-       " 'Country': 'South Korea',\n",
-       " 'Population': 2581000,\n",
-       " 'Area': 3194}"
+       "<function dict.keys>"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,7 +455,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
-    "pyeongchang_values[0]"
+    "pyeongchang_values[0].keys"
    ]
   },
   {
