--- a/index.ipynb
+++ b/index.ipynb
@@ -436,16 +436,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "dict_values(['PyeongChang', 'South Korea', 2581000, 3194])"
+       "['PyeongChang', 'South Korea', 2581000, 3194]"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
     "type(pyeongchang_values) # list\n",
-    "listngchang_values[0].values()"
+    "list(pyeongchang_values[0].values())"
    ]
   },
   {
