--- a/index.ipynb
+++ b/index.ipynb
@@ -451,11 +451,10 @@
     }
    ],
    "source": [
-    "pyeongchang_values = list(filter(lambda pyeongchang: pyeongchang['City']=='PyeongChang',cities))\n",
+    "pyeongchang_values = dict\n",
     "\n",
     "pyeongchang_values # ['PyeongChang', 'South Korea', 2581000, 3194]\n",
-    "type(pyeongchang_values) # list\n",
-    "list(pyeongchang_values[0].values())"
+    "type(pyeongchang_values) # list"
    ]
   },
   {
